@@ -5,12 +5,31 @@
 + java 8
 + python 3
 
+## Dependencies installation (windows and macos)
+Download and install dependencies:
++ git: https://git-scm.com/
++ java: https://www.oracle.com/java/technologies/javase-jre8-downloads.html
++ python: https://www.python.org/
+
+## Dependencies installation(linux)
+```
+sudo apt update
+sudo apt install git
+sudo apt-get install openjdk-8-jre
+sudo apt-get install python3
+```
+
 ## Steps to reproduce
-In following commands python might have to be replaced with python3
+
+### SZZUnleashed with and without improvements
+
+On windows replace python3 with python and pip3 with pip
 
 Prepare szz
 ```
 git clone https://github.com/pwr-pbrwio/PBR20M1
+cd PBR20M1
+pip3 install -r requirements.txt
 ```
 Get repository from data set (example of commons-lang)
 ```
@@ -21,11 +40,11 @@ git clone https://github.com/apache/commons-lang.git
 Download project issues (filtered with data set)
 If using Jira as issue tracker
 ```
-python ../PBR20M1/Scripts/getNetoIssuesJira.py --owner "apache" --repo "commons-lang" --tag "lang" --repoPath "./commons-lang" --jira "issues.apache.org/jira"
+python3 ../PBR20M1/Scripts/getNetoIssuesJira.py --owner "apache" --repo "commons-lang" --tag "lang" --repoPath "./commons-lang" --jira "issues.apache.org/jira"
 ```
 If using Github as issue tracker (mockito as example)
 ```
-python ..\PBR20M1\Scripts\getNetoIssuesJira.py --owner "mockito" --repo "mockito" --repoPath "./mockito" --fetchStrategy github
+python3 ..\PBR20M1\Scripts\getNetoIssuesJira.py --owner "mockito" --repo "mockito" --repoPath "./mockito" --fetchStrategy github
 ```
 Run szz algorithm
 ```
@@ -40,9 +59,42 @@ Where flags -fix -ra -up -mt -fp are optional
 
 Get results
 ```
-python ../PBR20M1/Scripts/measurePos.py --repoName="commons-lang"
+python3 ../PBR20M1/Scripts/measurePos.py --repoName="commons-lang"
 ```
-Or for OpenSZZ
-```
-python ../PBR20M1/Scripts/openSzzAcc.py --repoName="commons-lang"
-```
+
+### OpenSZZ
+
+#### Requirements
+
+The following software is required:
+
++ docker
++ docker-compose
+
+#### Usage
+
+1. Clone the [OpenSZZ repo](https://github.com/clowee/OpenSZZ-Cloud-Native).
+2. Publication was prepared on version `533b4911710753e76c78c02c02ca10707a74e05b`. Make sure the correct version is used.
+3. Increase the heap size by adding the `JVM_OPTS` environmental variable to the `web` service in the `docker-compose.yml` file. Note that using docker on windows or linux might require increasing the total memory assigned to docker in the docker settings. Example:
+
+    ```yaml
+        web:
+            build: ./core
+            ports:
+            - "${PORTRANGE_FROM}-${PORTRANGE_TO}:8080"
+            networks:
+            - spring-cloud-network
+            depends_on:
+            - rabbitmq
+            volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            environment:
+            - JVM_OPTS=-Xmx12g -Xms12g -XX:MaxPermSize=1024m
+    ```
+
+4. Follow the [OpenSZZ readme file](https://github.com/clowee/OpenSZZ-Cloud-Native) for instructions on starting the application and running repositories.
+5. Analyse results
+
+    ```bash
+    python3 ../PBR20M1/Scripts/openSzzAcc.py --repoName="commons-lang"
+    ```
